--- a/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout_sub1.jrxml
+++ b/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout_sub1.jrxml
@@ -135,11 +135,12 @@ ORDER BY m_inoutline_line ASC]]>
 	<group name="Gruppo1" footerPosition="StackAtBottom" preventOrphanFooter="true">
 		<groupExpression><![CDATA[$F{c_order_documentno}]]></groupExpression>
 		<groupHeader>
-			<band height="15">
+			<band height="12">
 				<property name="com.jaspersoft.studio.layout"/>
+				<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				<printWhenExpression><![CDATA[!($F{c_order_documentno}==null)]]></printWhenExpression>
 				<textField isBlankWhenNull="true">
-					<reportElement x="80" y="0" width="298" height="15" isRemoveLineWhenBlank="true" forecolor="#000DFF" uuid="86406d88-f223-4b23-9b47-c6221a713048"/>
+					<reportElement positionType="Float" x="80" y="0" width="298" height="12" isRemoveLineWhenBlank="true" forecolor="#000DFF" uuid="86406d88-f223-4b23-9b47-c6221a713048"/>
 					<box>
 						<topPen lineStyle="Solid" lineColor="#000000"/>
 						<bottomPen lineStyle="Solid" lineColor="#000000"/>
@@ -159,7 +160,7 @@ ORDER BY m_inoutline_line ASC]]>
 		<band height="12">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.spreadsheet.SpreadsheetLayout"/>
 			<staticText>
-				<reportElement mode="Opaque" x="80" y="0" width="298" height="12" backcolor="#E5FF91" uuid="9cad1106-c250-49f2-9a59-c37b9f04642b">
+				<reportElement positionType="Float" mode="Opaque" x="80" y="0" width="298" height="12" backcolor="#E5FF91" uuid="9cad1106-c250-49f2-9a59-c37b9f04642b">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="5ad407ab-c715-4c2e-bb2f-7047aacdd74d"/>
 				</reportElement>
 				<box>
@@ -175,7 +176,7 @@ ORDER BY m_inoutline_line ASC]]>
 				<text><![CDATA[DESCRIZIONE DETTAGLIATA ARTICOLO]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="378" y="0" width="50" height="12" backcolor="#E5FF91" uuid="4928d68a-07eb-43d7-ad9d-7f5feea6eb78">
+				<reportElement positionType="Float" mode="Opaque" x="378" y="0" width="50" height="12" backcolor="#E5FF91" uuid="4928d68a-07eb-43d7-ad9d-7f5feea6eb78">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="a86d4b2d-6c4c-4f96-95ac-6b029c4b44dc"/>
 				</reportElement>
 				<box>
@@ -192,7 +193,7 @@ ORDER BY m_inoutline_line ASC]]>
 				<text><![CDATA[U.M.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="0" y="0" width="80" height="12" backcolor="#E5FF91" uuid="830237e8-ae96-4e61-b6b1-9edd9506ee74">
+				<reportElement positionType="Float" mode="Opaque" x="0" y="0" width="80" height="12" backcolor="#E5FF91" uuid="830237e8-ae96-4e61-b6b1-9edd9506ee74">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4d7e9fc9-7b59-4dc6-b9c7-ca6873f759f0"/>
 				</reportElement>
 				<box>
@@ -208,7 +209,7 @@ ORDER BY m_inoutline_line ASC]]>
 				<text><![CDATA[COD. ART.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="428" y="0" width="60" height="12" backcolor="#E5FF91" uuid="e6bd286e-3493-47ad-813b-d502ce559cf4">
+				<reportElement positionType="Float" mode="Opaque" x="428" y="0" width="60" height="12" backcolor="#E5FF91" uuid="e6bd286e-3493-47ad-813b-d502ce559cf4">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="ba2cfe20-2175-4b31-8baf-0beb645f9c3f"/>
 				</reportElement>
 				<box>
@@ -224,10 +225,10 @@ ORDER BY m_inoutline_line ASC]]>
 				<text><![CDATA[QUANTITA']]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="488" y="0" width="67" height="12" backcolor="#E5FF91" uuid="b16680d6-77fe-470c-bd4e-d3952c5cc5dc">
+				<reportElement positionType="Float" mode="Opaque" x="488" y="0" width="67" height="12" backcolor="#E5FF91" uuid="b16680d6-77fe-470c-bd4e-d3952c5cc5dc">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="1f883e7f-cc62-46ec-ae69-e69dd0c98e00"/>
 				</reportElement>
-				<box>
+				<box rightPadding="5">
 					<pen lineWidth="1.0"/>
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -242,16 +243,17 @@ ORDER BY m_inoutline_line ASC]]>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="14">
+		<band height="11">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.spreadsheet.SpreadsheetLayout"/>
+			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<printWhenExpression><![CDATA[!($F{ad_orginfo_lit_report_param}.charAt(16)=='N' && $F{m_product_producttype}.equals("S"))]]></printWhenExpression>
 			<frame>
-				<reportElement x="0" y="0" width="555" height="14" uuid="10432992-0c93-4ddb-b243-3d656d981225">
+				<reportElement positionType="Float" x="0" y="0" width="555" height="11" uuid="10432992-0c93-4ddb-b243-3d656d981225">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.spreadsheet.SpreadsheetLayout"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<textField>
-					<reportElement x="0" y="0" width="80" height="14" uuid="4b052802-baaa-417b-9c6e-acc2fa9934ba">
+					<reportElement positionType="Float" x="0" y="0" width="80" height="11" uuid="4b052802-baaa-417b-9c6e-acc2fa9934ba">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4d7e9fc9-7b59-4dc6-b9c7-ca6873f759f0"/>
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
@@ -268,7 +270,7 @@ ORDER BY m_inoutline_line ASC]]>
 					<textFieldExpression><![CDATA[$F{m_product_value}]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement x="80" y="0" width="298" height="14" uuid="fed77b28-93de-4074-9ef2-7de8fdb1256b">
+					<reportElement positionType="Float" x="80" y="0" width="298" height="11" uuid="fed77b28-93de-4074-9ef2-7de8fdb1256b">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="5ad407ab-c715-4c2e-bb2f-7047aacdd74d"/>
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
@@ -284,7 +286,7 @@ ORDER BY m_inoutline_line ASC]]>
 					<textFieldExpression><![CDATA[$F{m_inoutline_name}!=null?$F{m_inoutline_name}:$F{m_product_name}]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement x="378" y="0" width="50" height="14" uuid="7ed35940-a07f-40fb-ab8e-1904ca2e9ba4">
+					<reportElement positionType="Float" x="378" y="0" width="50" height="11" uuid="7ed35940-a07f-40fb-ab8e-1904ca2e9ba4">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="a86d4b2d-6c4c-4f96-95ac-6b029c4b44dc"/>
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 						<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
@@ -302,7 +304,7 @@ ORDER BY m_inoutline_line ASC]]>
 					<textFieldExpression><![CDATA[$F{c_uom_trl_uomsymbol}.toUpperCase()]]></textFieldExpression>
 				</textField>
 				<textField pattern="#,##0.###;(#,##0.###-)">
-					<reportElement x="428" y="0" width="60" height="14" uuid="b62dbd27-67d2-4ea3-8a5e-6990c3480174">
+					<reportElement positionType="Float" x="428" y="0" width="60" height="11" uuid="b62dbd27-67d2-4ea3-8a5e-6990c3480174">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="ba2cfe20-2175-4b31-8baf-0beb645f9c3f"/>
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 						<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
@@ -314,11 +316,12 @@ ORDER BY m_inoutline_line ASC]]>
 					<textFieldExpression><![CDATA[$F{m_inoutline_movementqty}]]></textFieldExpression>
 				</textField>
 				<textField pattern="#,##0.###;(#,##0.###-)">
-					<reportElement x="488" y="0" width="67" height="14" uuid="464b5c09-9c8e-40b4-a238-f6adcc7d1ebc">
+					<reportElement positionType="Float" x="488" y="0" width="67" height="11" uuid="464b5c09-9c8e-40b4-a238-f6adcc7d1ebc">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="1f883e7f-cc62-46ec-ae69-e69dd0c98e00"/>
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 						<printWhenExpression><![CDATA[$F{c_uom_trl_uomsymbol}.equals( "Nr" )]]></printWhenExpression>
 					</reportElement>
+					<box rightPadding="5"/>
 					<textElement textAlignment="Right" verticalAlignment="Top">
 						<font size="9"/>
 					</textElement>
@@ -357,7 +360,7 @@ ORDER BY m_inoutline_line ASC]]>
 				<textFieldExpression><![CDATA[$F{m_inoutline_help}!=null?$F{m_inoutline_help}:$F{m_product_help}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement positionType="Float" stretchType="RelativeToBandHeight" x="80" y="10" width="298" height="5" isRemoveLineWhenBlank="true" uuid="e74a78a8-5825-4e65-b92d-7c03ee301148">
+				<reportElement positionType="Float" x="80" y="10" width="298" height="5" isRemoveLineWhenBlank="true" uuid="e74a78a8-5825-4e65-b92d-7c03ee301148">
 					<printWhenExpression><![CDATA[$F{ad_orginfo_lit_report_param}.charAt(13) =='Y' ? 1==1 :  $F{ad_orginfo_lit_report_param}.charAt(13) =='N' ? 1==2 :  $F{c_bpartner_lit_bpreportparam}.length()<1 ? 1==2 :$F{c_bpartner_lit_bpreportparam}.charAt(1)=='Y' ? 1==1 :1==2]]></printWhenExpression>
 				</reportElement>
 				<box>
@@ -370,13 +373,22 @@ ORDER BY m_inoutline_line ASC]]>
 				<textFieldExpression><![CDATA[($F{lit_attribute_v_lot})!= null ? "LOTTO E SCADENZA: " + $F{lit_attribute_v_lot} : ""]]></textFieldExpression>
 			</textField>
 		</band>
-		<band height="4">
-			<line>
-				<reportElement x="0" y="2" width="550" height="1" uuid="2712c883-12fa-4516-9c10-a2c974c9d99d"/>
-				<graphicElement>
-					<pen lineWidth="0.5"/>
-				</graphicElement>
-			</line>
+		<band height="1">
+			<property name="com.jaspersoft.studio.unit.height" value="px"/>
+			<frame>
+				<reportElement positionType="Float" x="0" y="0" width="555" height="1" uuid="9841de02-c3f8-4126-bcab-78fb4f66a631">
+					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
+					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				</reportElement>
+				<line>
+					<reportElement positionType="Float" x="0" y="0" width="555" height="1" uuid="2712c883-12fa-4516-9c10-a2c974c9d99d">
+						<property name="com.jaspersoft.studio.unit.width" value="px"/>
+					</reportElement>
+					<graphicElement>
+						<pen lineWidth="0.5"/>
+					</graphicElement>
+				</line>
+			</frame>
 		</band>
 	</detail>
 </jasperReport>
