--- a/04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m/c_invoice0042m.jrxml
+++ b/04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m/c_invoice0042m.jrxml
@@ -546,7 +546,7 @@ WHERE
 				<imageExpression><![CDATA[$F{ad_image_a_binarydata}]]></imageExpression>
 			</image>
 			<frame>
-				<reportElement x="260" y="64" width="295" height="122" isRemoveLineWhenBlank="true" uuid="24b898dc-c5a4-4dc4-8dec-b8e9ed8c2908">
+				<reportElement x="260" y="64" width="295" height="124" isRemoveLineWhenBlank="true" uuid="24b898dc-c5a4-4dc4-8dec-b8e9ed8c2908">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -556,7 +556,7 @@ WHERE
 					<pen lineWidth="0.5" lineStyle="Solid"/>
 				</box>
 				<staticText>
-					<reportElement positionType="Float" mode="Opaque" x="0" y="0" width="295" height="14" forecolor="#081080" backcolor="#BFBFBF" uuid="bc094150-b3e5-4a42-aad5-faee6705aac2"/>
+					<reportElement positionType="Float" mode="Opaque" x="0" y="0" width="295" height="16" forecolor="#081080" backcolor="#BFBFBF" uuid="bc094150-b3e5-4a42-aad5-faee6705aac2"/>
 					<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0">
 						<pen lineWidth="0.5" lineColor="#000000"/>
 					</box>
@@ -567,7 +567,7 @@ WHERE
 					<text><![CDATA[CLIENTE]]></text>
 				</staticText>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement positionType="Float" x="0" y="14" width="295" height="12" isRemoveLineWhenBlank="true" uuid="e7493a2a-c189-4aba-990d-1ccfe6985f23"/>
+					<reportElement positionType="Float" x="0" y="16" width="295" height="12" isRemoveLineWhenBlank="true" uuid="e7493a2a-c189-4aba-990d-1ccfe6985f23"/>
 					<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0"/>
 					<textElement textAlignment="Left" verticalAlignment="Middle">
 						<font size="10" isBold="true"/>
@@ -576,7 +576,7 @@ WHERE
 					<textFieldExpression><![CDATA[$F{c_bpartner_name}]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="true">
-					<reportElement positionType="Float" x="0" y="26" width="295" height="12" isRemoveLineWhenBlank="true" uuid="1572f64c-c9c2-49a2-8a82-5ce911f2fd31">
+					<reportElement positionType="Float" x="0" y="28" width="295" height="12" isRemoveLineWhenBlank="true" uuid="1572f64c-c9c2-49a2-8a82-5ce911f2fd31">
 						<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
 					</reportElement>
 					<textElement textAlignment="Left" verticalAlignment="Middle">
@@ -585,7 +585,7 @@ WHERE
 					<textFieldExpression><![CDATA[$F{c_bpartner_name2}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement positionType="Float" x="0" y="38" width="295" height="12" isRemoveLineWhenBlank="true" uuid="b8525fff-7077-4de3-9b04-1a399f41aefb"/>
+					<reportElement positionType="Float" x="0" y="40" width="295" height="12" isRemoveLineWhenBlank="true" uuid="b8525fff-7077-4de3-9b04-1a399f41aefb"/>
 					<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0"/>
 					<textElement textAlignment="Left" verticalAlignment="Middle">
 						<font isBold="false"/>
@@ -594,21 +594,21 @@ WHERE
 					<textFieldExpression><![CDATA[$F{c_location_address1}]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="true">
-					<reportElement positionType="Float" x="0" y="50" width="295" height="12" isRemoveLineWhenBlank="true" uuid="2f9bdfea-da26-4579-94a2-2499894466b0"/>
+					<reportElement positionType="Float" x="0" y="52" width="295" height="12" isRemoveLineWhenBlank="true" uuid="2f9bdfea-da26-4579-94a2-2499894466b0"/>
 					<textElement textAlignment="Left" verticalAlignment="Middle">
 						<paragraph leftIndent="5"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{c_location_address2}]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="true">
-					<reportElement positionType="Float" x="0" y="62" width="295" height="12" isRemoveLineWhenBlank="true" uuid="fcc811e7-9e12-438a-b64e-3a078be5e499"/>
+					<reportElement positionType="Float" x="0" y="64" width="295" height="12" isRemoveLineWhenBlank="true" uuid="fcc811e7-9e12-438a-b64e-3a078be5e499"/>
 					<textElement textAlignment="Left" verticalAlignment="Middle">
 						<paragraph leftIndent="5"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{c_location_address3}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement positionType="Float" x="0" y="74" width="295" height="12" isRemoveLineWhenBlank="true" uuid="c20fe141-70df-4081-9c8b-f3730fec4595"/>
+					<reportElement positionType="Float" x="0" y="76" width="295" height="12" isRemoveLineWhenBlank="true" uuid="c20fe141-70df-4081-9c8b-f3730fec4595"/>
 					<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0"/>
 					<textElement textAlignment="Left" verticalAlignment="Middle">
 						<font isBold="false"/>
@@ -617,7 +617,7 @@ WHERE
 					<textFieldExpression><![CDATA[($F{c_location_postal} == null ? "" : $F{c_location_postal}) + " "+ ($F{c_location_city} == null ? "" : $F{c_location_city}) +" "+($F{c_location_regionname} == null ? "" : "("+$F{c_location_regionname})+") " +($F{c_country_trl_name} == null ? "" : $F{c_country_trl_name})]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="true">
-					<reportElement positionType="Float" x="0" y="86" width="295" height="12" isRemoveLineWhenBlank="true" uuid="aadca227-f85b-4325-b53b-0ec795b82943"/>
+					<reportElement positionType="Float" x="0" y="88" width="295" height="12" isRemoveLineWhenBlank="true" uuid="aadca227-f85b-4325-b53b-0ec795b82943"/>
 					<box>
 						<pen lineWidth="0.0"/>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -632,74 +632,19 @@ WHERE
 					<textFieldExpression><![CDATA["P.IVA: "+$F{c_bpartner_lit_taxid}]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="true">
-					<reportElement positionType="Float" x="0" y="98" width="295" height="12" isRemoveLineWhenBlank="true" uuid="96a783d4-969f-4187-8968-09940e6f0916"/>
+					<reportElement positionType="Float" x="0" y="100" width="295" height="12" isRemoveLineWhenBlank="true" uuid="96a783d4-969f-4187-8968-09940e6f0916"/>
 					<textElement textAlignment="Left" verticalAlignment="Middle">
 						<paragraph leftIndent="5"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{c_bpartner_location_a_phone}!= null ? "TELEFONO: "+$F{c_bpartner_location_a_phone}:""]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="true">
-					<reportElement positionType="Float" x="0" y="110" width="295" height="12" isRemoveLineWhenBlank="true" uuid="1ef54389-f109-4338-aaf3-abd2e5cb779d"/>
+					<reportElement positionType="Float" x="0" y="112" width="295" height="12" isRemoveLineWhenBlank="true" uuid="1ef54389-f109-4338-aaf3-abd2e5cb779d"/>
 					<textElement textAlignment="Left" verticalAlignment="Middle">
 						<paragraph leftIndent="5"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{c_bpartner_location_email}!= null ? "eMail: "+$F{c_bpartner_location_email}:""]]></textFieldExpression>
 				</textField>
-			</frame>
-			<frame>
-				<reportElement mode="Opaque" x="0" y="64" width="260" height="78" backcolor="#A1D971" uuid="9c71c8df-3b71-4829-9cf8-dfac4a81ae13"/>
-				<box padding="0">
-					<pen lineWidth="0.5"/>
-				</box>
-				<rectangle>
-					<reportElement x="0" y="22" width="260" height="56" uuid="f6c645e5-12e5-40d6-bbb7-88fff3455ec8"/>
-					<graphicElement>
-						<pen lineWidth="0.5"/>
-					</graphicElement>
-				</rectangle>
-				<rectangle>
-					<reportElement mode="Transparent" x="0" y="22" width="130" height="56" uuid="4a1c380f-0692-4b7a-a0d5-447b53071cd9"/>
-					<graphicElement>
-						<pen lineWidth="0.5"/>
-					</graphicElement>
-				</rectangle>
-				<rectangle>
-					<reportElement mode="Transparent" x="130" y="22" width="130" height="56" uuid="84d8819b-3999-4c45-9429-2e891b2f468f"/>
-					<graphicElement>
-						<pen lineWidth="0.5"/>
-					</graphicElement>
-				</rectangle>
-				<textField>
-					<reportElement x="0" y="0" width="260" height="22" forecolor="#0022FF" uuid="c97cb06e-4178-4c2a-a767-c60d9c06fb22"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font size="13" isBold="true"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{c_doctype_trl_printname}]]></textFieldExpression>
-				</textField>
-				<textField>
-					<reportElement x="4" y="43" width="124" height="30" forecolor="#0022FF" uuid="5a5b5f87-a645-449c-bfcf-5656dd5cb265"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="SansSerif" size="14" isBold="true"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{c_invoice_documentno}]]></textFieldExpression>
-				</textField>
-				<textField pattern="dd-MM-yyyy">
-					<reportElement x="132" y="43" width="128" height="30" forecolor="#0022FF" uuid="ef86ac2c-21b5-442d-afa7-c5a4a010c0d3"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="SansSerif" size="14" isBold="true"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{c_invoice_dateacct}]]></textFieldExpression>
-				</textField>
-				<staticText>
-					<reportElement x="4" y="27" width="124" height="16" uuid="3f4366d2-2e2a-4a14-936d-0e47b9008671"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle"/>
-					<text><![CDATA[NUMERO DOC.]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="132" y="27" width="128" height="16" uuid="d876e8e7-251c-481b-aec2-03d7aac4ad6c"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle"/>
-					<text><![CDATA[DATA DOCUMENTO]]></text>
-				</staticText>
 			</frame>
 			<staticText>
 				<reportElement x="440" y="0" width="115" height="40" uuid="b403312e-ba2a-4f81-9c12-a3c7bd42cadf"/>
@@ -760,7 +705,7 @@ CORTESIA]]></text>
 				</textField>
 			</frame>
 			<frame>
-				<reportElement x="0" y="143" width="260" height="46" uuid="bf3d4f70-9362-4a6b-ba27-24fcab1871c1">
+				<reportElement x="0" y="143" width="260" height="45" uuid="bf3d4f70-9362-4a6b-ba27-24fcab1871c1">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 				</reportElement>
 				<box>
@@ -775,7 +720,7 @@ CORTESIA]]></text>
 					<textFieldExpression><![CDATA["TERMINE DI PAGAMENTO:"+$F{c_paymentterm_value}]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="true">
-					<reportElement x="0" y="23" width="260" height="23" uuid="bd0eeee2-8a69-42d9-a150-392d3e6d576a"/>
+					<reportElement x="0" y="23" width="260" height="22" uuid="bd0eeee2-8a69-42d9-a150-392d3e6d576a"/>
 					<box leftPadding="5"/>
 					<textElement verticalAlignment="Middle">
 						<font size="8"/>
@@ -784,7 +729,7 @@ CORTESIA]]></text>
 				</textField>
 			</frame>
 			<frame>
-				<reportElement x="0" y="189" width="260" height="60" uuid="604d6531-5a62-45ae-81f1-2852862e02b9"/>
+				<reportElement x="0" y="188" width="260" height="60" uuid="604d6531-5a62-45ae-81f1-2852862e02b9"/>
 				<staticText>
 					<reportElement x="0" y="0" width="260" height="20" isRemoveLineWhenBlank="true" uuid="7a3620b6-2cb9-4cd5-86b9-2ac1c48034b0">
 						<printWhenExpression><![CDATA[$F{c_invoice_c_bankaccount_id} != null]]></printWhenExpression>
@@ -890,6 +835,40 @@ IBAN: IT 22 E 02008 82620 000103213822]]></text>
 					<text><![CDATA[BANCA: UNICREDIT S.p.A.
 IBAN: IT 33 S 02008 82620 000103213759]]></text>
 				</staticText>
+			</frame>
+			<frame>
+				<reportElement x="0" y="0" width="260" height="22" uuid="4b17f84c-ff6f-4518-ba09-438145f21733"/>
+				<textField>
+					<reportElement x="0" y="67" width="258" height="76" forecolor="#0022FF" uuid="c97cb06e-4178-4c2a-a767-c60d9c06fb22"/>
+					<textElement textAlignment="Center" verticalAlignment="Top">
+						<font size="13" isBold="true"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$F{c_doctype_trl_printname}]]></textFieldExpression>
+				</textField>
+				<staticText>
+					<reportElement mode="Opaque" x="3" y="97" width="124" height="16" uuid="3f4366d2-2e2a-4a14-936d-0e47b9008671"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<text><![CDATA[NUMERO DOC.]]></text>
+				</staticText>
+				<textField>
+					<reportElement mode="Opaque" x="260" y="16" width="124" height="30" forecolor="#0022FF" uuid="5a5b5f87-a645-449c-bfcf-5656dd5cb265"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle">
+						<font fontName="SansSerif" size="14" isBold="true"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$F{c_invoice_documentno}]]></textFieldExpression>
+				</textField>
+				<staticText>
+					<reportElement mode="Opaque" x="126" y="97" width="128" height="16" uuid="d876e8e7-251c-481b-aec2-03d7aac4ad6c"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<text><![CDATA[DATA DOCUMENTO]]></text>
+				</staticText>
+				<textField pattern="dd-MM-yyyy">
+					<reportElement mode="Opaque" x="190" y="12" width="128" height="30" forecolor="#0022FF" uuid="ef86ac2c-21b5-442d-afa7-c5a4a010c0d3"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle">
+						<font fontName="SansSerif" size="14" isBold="true"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$F{c_invoice_dateacct}]]></textFieldExpression>
+				</textField>
 			</frame>
 		</band>
 	</title>
